# TestTaskInfateks

./: TASK.docx
Test1/: CMakeLists.txt  Test1.cpp  client.cpp  client.h  container.cpp  container.h
Test2/: CMakeLists.txt  Test2.cpp  server.cpp  server.h
Test2/debug/: CMakeCache.txt  Makefile  cmake_install.cmake
